# Assesement

./: README.md  exam.db  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  db.py  models.py  schemas.py  security.py
app/routers/: admin_router.py  exam_router.py  submission_router.py
data/: questions.json
scripts/: seed_questions.py
templates/: 400.html  404.html  admin_dashboard.html  base.html  exam_form.html  exam_list.html  home.html  result.html
tests/: conftest.py  test_exam_flow.py  test_scoring.py
